   * Facilitates adding more options in the future without breaking existing implementations
 * SASL improvements
   * The enabled mechanisms can now be configured (in the SASL DSL)
   * Added support for EXTERNAL mechanism, disabled by default
   * Now attempts to renegotiate if the server doesn't recognise the SASL mechanism that was tried
 * (Internal) Minor version updates for Gradle, Kotlin and JUnit

v0.6.0

 * Changed USER command to not send the server name, per modern standards
 * Added support for SASL authentication (with PLAIN mechanism)
 * Removed some unused test code
 * Fixed handling of user mode changes on channels (op/deop/etc)
 * Message extensions:
    * Added support for IRCv3 message tags v3.3
    * Exposed message IDs in MessageReceived and ActionReceived events
    * When sending a message you can now indicate what it is in reply to
    * Added sendTagMessage() to send message tags without any content
    * The reply() utility automatically marks messages as a reply
    * Added react() utility to send a reaction client tag
 * State is now reset when the client is disconnected, so you can immediately reconnect
 * (Internal) improved how coroutines and channels are used in LineBufferedSocket

v0.5.0

 * Server state:
    * Added ServerConnecting and ServerDisconnected events
    * Server status now starts as Disconnected rather than Connecting
    * Improved error message when features are of an unexpected type
 * Channel modes:
    * CHANMODES feature is now stored as an array, not a single comma-separated string
    * Added ChanModeType enum, and method in ServerState to get the type of a mode
    * Added ModeChanged event, for user and channel mode changes and discovery
    * Added modes and modesDiscovered to ChannelState
 * Other new events:
    * Added MotdFinished event
    * Added UserAccountChanged event
    * Added ChannelUserKicked event
    * Added NoticeReceived event
    * Added CtcpReplyReceived event