@@ -8,6 +8,7 @@ vNEXT (in development)
    * The enabled mechanisms can now be configured (in the SASL DSL)
    * Added support for EXTERNAL mechanism, disabled by default
    * Now attempts to renegotiate if the server doesn't recognise the SASL mechanism that was tried
+ * Added UserNickChanged and corresponding ChannelNickChanged events
  * (Internal) Minor version updates for Gradle, Kotlin and JUnit
 
 v0.6.0
